# Decentralized_Training

./: README.md
edgemesh/: .gitignore  ARCHITECTURE.md  Makefile  README.md
edgemesh/agent/: .env.example  README.md  main.py  pyproject.toml
edgemesh/agent/src/agent_service/: main.py  settings.py
edgemesh/agent/tests/: test_agent.py
edgemesh/coordinator/: .env.example  README.md  pyproject.toml
edgemesh/coordinator/api/: auth.py  schemas.py  services.py  state.py  tasks.py
edgemesh/coordinator/api/routers/: __init__.py  agent.py  cluster.py  health.py  jobs.py  metrics.py  nodes.py  simulate.py  stream.py  tasks.py
edgemesh/coordinator/app/coordinator_service/: logging_config.py  main.py  models.py  settings.py
edgemesh/coordinator/db/: __init__.py  migrate.py  orm.py  repository.py
edgemesh/coordinator/db/migrations/: 0001_init.sql  0003_phase15_tasks_results.sql
edgemesh/coordinator/models/: __init__.py  enums.py  job.py  node.py  task.py
edgemesh/coordinator/scheduler/: __init__.py  core.py
edgemesh/coordinator/scripts/: db_smoke.py
edgemesh/coordinator/tests/: test_api.py  test_domain_models.py  test_repository.py  test_scheduler.py
edgemesh/ui/: .env.example  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
edgemesh/ui/src/: App.tsx  main.tsx  styles.css  types.ts  utils.test.ts  utils.ts
edgemesh/ui/src/api/: edgemesh.ts
edgemesh/ui/src/components/: LineChart.tsx  PolicyControls.tsx
edgemesh/ui/src/hooks/: useNodesRealtime.tsx
edgemesh/ui/src/pages/: DashboardPage.tsx  DeviceDetailPage.tsx  (+3 more)
