[project]
name = "edgemesh-agent"
version = "0.1.0"
description = "Edge agent service for edgemesh"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.1",
  "psutil>=6.0.0",
  "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "ruff>=0.12.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
