[project]
name = "edgemesh-coordinator"
version = "0.1.0"
description = "Coordinator service for edgemesh"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.35.0",
  "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3.4",
  "ruff>=0.12.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
